@@ -337,12 +337,12 @@ STATEMENT_SELECT_CATEGORIES = \
     order by jam_category.sort_key \
     limit ? offset ?
 STATEMENT_SELECT_CATEGORY_TOPICS = \
-    select jam_topic.topic_name, coalesce(jam_category.sort_key, jam_topic.topic_name) as sort_key \
+    select jam_topic.topic_name, coalesce(jam_category.sort_key, jam_topic.topic_name) as sort_key, \
+    jam_topic.topic_type \
     from jam_topic, jam_category \
     where jam_topic.topic_id = jam_category.child_topic_id \
     and jam_topic.virtual_wiki_id = ? \
     and lower(jam_category.category_name) = ? \
-    and jam_topic.topic_type = ? \
     and delete_date is null \
     order by sort_key  
 STATEMENT_SELECT_GROUP_SEQUENCE = \
